--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./03 - CSS Variables/">03 - CSS Variables</a></li>
         <li><a href="./04 - Array Cardio Day 1/">04 - Array Cardio Day 1</a></li>
         <li><a href="./05 - Flex Panel Gallery/">05 - Flex Panel Gallery</a></li>
+        <li><a href="./06 - Ajax Type Ahead/">06 - Ajax Type Ahead</a></li>
     </ul>
 
 </body>
