--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./04 - Array Cardio Day 1/">04 - Array Cardio Day 1</a></li>
         <li><a href="./05 - Flex Panel Gallery/">05 - Flex Panel Gallery</a></li>
         <li><a href="./06 - Ajax Type Ahead/">06 - Ajax Type Ahead</a></li>
+        <li><a href="./07 - Array Cardio Day 2/">07 - Array Cardio Day 2</a></li>
     </ul>
 
 </body>
