--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./05 - Flex Panel Gallery/">05 - Flex Panel Gallery</a></li>
         <li><a href="./06 - Ajax Type Ahead/">06 - Ajax Type Ahead</a></li>
         <li><a href="./07 - Array Cardio Day 2/">07 - Array Cardio Day 2</a></li>
+        <li><a href="./08 - Fun with HTML5 Canvas/">08 - Fun with HTML5 Canvas</a></li>
     </ul>
 
 </body>
