--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./08 - Fun with HTML5 Canvas/">08 - Fun with HTML5 Canvas</a></li>
         <li><a href="./09 - Dev Tools Domination/">09 - Dev Tools Domination</a></li>
         <li><a href="./10 - Hold Shift and Check Checkboxes/">10 - Hold Shift and Check Checkboxes</a></li>
+        <li><a href="./11 - Custom Video Player/">11 - Custom Video Player</a></li>
     </ul>
 
 </body>
