--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./09 - Dev Tools Domination/">09 - Dev Tools Domination</a></li>
         <li><a href="./10 - Hold Shift and Check Checkboxes/">10 - Hold Shift and Check Checkboxes</a></li>
         <li><a href="./11 - Custom Video Player/">11 - Custom Video Player</a></li>
+        <li><a href="./12 - Key Sequence Detection/">12 - Key Sequence Detection</a></li>
     </ul>
 
 </body>
