--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="./10 - Hold Shift and Check Checkboxes/">10 - Hold Shift and Check Checkboxes</a></li>
         <li><a href="./11 - Custom Video Player/">11 - Custom Video Player</a></li>
         <li><a href="./12 - Key Sequence Detection/">12 - Key Sequence Detection</a></li>
+        <li><a href="./13 - Slide in on Scroll/">13 - Slide in on Scroll</a></li>
     </ul>
 
 </body>
