--- a/index.html
+++ b/index.html
@@ -17,19 +17,90 @@
     <p>30 Day Vanilla JS Coding Challenge by Wes Bos at <a href="https://javascript30.com/">javascript30.com</a></p>
 
     <ul>
-        <li><a href="./01 - JavaScript Drum Kit/">01 - JavaScript Drum Kit</a></li>
-        <li><a href="./02 - JS and CSS Clock/">02 - JS and CSS Clock</a></li>
-        <li><a href="./03 - CSS Variables/">03 - CSS Variables</a></li>
-        <li><a href="./04 - Array Cardio Day 1/">04 - Array Cardio Day 1</a></li>
-        <li><a href="./05 - Flex Panel Gallery/">05 - Flex Panel Gallery</a></li>
-        <li><a href="./06 - Ajax Type Ahead/">06 - Ajax Type Ahead</a></li>
-        <li><a href="./07 - Array Cardio Day 2/">07 - Array Cardio Day 2</a></li>
-        <li><a href="./08 - Fun with HTML5 Canvas/">08 - Fun with HTML5 Canvas</a></li>
-        <li><a href="./09 - Dev Tools Domination/">09 - Dev Tools Domination</a></li>
-        <li><a href="./10 - Hold Shift and Check Checkboxes/">10 - Hold Shift and Check Checkboxes</a></li>
-        <li><a href="./11 - Custom Video Player/">11 - Custom Video Player</a></li>
-        <li><a href="./12 - Key Sequence Detection/">12 - Key Sequence Detection</a></li>
-        <li><a href="./13 - Slide in on Scroll/">13 - Slide in on Scroll</a></li>
+        <li>
+            <a href="./01 - JavaScript Drum Kit/">
+                <div class="number">01</div>
+                <div class="text">JavaScript Drum Kit</div>
+            </a>
+        </li>
+        <li>
+            <a href="./02 - JS and CSS Clock/">
+                <div class="number">02</div>
+                <div class="text">JS and CSS Clock</div>
+            </a>
+        </li>
+        <li>
+            <a href="./03 - CSS Variables/">
+                <div class="number">03</div>
+                <div class="text">CSS Variables</div>
+            </a>
+        </li>
+        <li>
+            <a href="./04 - Array Cardio Day 1/">
+                <div class="number">04</div>
+                <div class="text">Array Cardio Day 1</div>
+            </a>
+        </li>
+        <li>
+            <a href="./05 - Flex Panel Gallery/">
+                <div class="number">05</div>
+                <div class="text">Flex Panel Gallery</div>
+            </a>
+        </li>
+        <li>
+            <a href="./06 - Ajax Type Ahead/">
+                <div class="number">06</div>
+                <div class="text">Ajax Type Ahead</div>
+            </a>
+        </li>
+        <li>
+            <a href="./07 - Array Cardio Day 2/">
+                <div class="number">07</div>
+                <div class="text">Array Cardio Day 2</div>
+            </a>
+        </li>
+        <li>
+            <a href="./08 - Fun with HTML5 Canvas/">
+                <div class="number">08</div>
+                <div class="text">Fun with HTML5 Canvas</div>
+            </a>
+        </li>
+        <li>
+            <a href="./09 - Dev Tools Domination/">
+                <div class="number">09</div>
+                <div class="text">Dev Tools Domination</div>
+            </a>
+        </li>
+        <li>
+            <a href="./10 - Hold Shift and Check Checkboxes/">
+                <div class="number">10</div>
+                <div class="text">Hold Shift and Check Checkboxes</div>
+            </a>
+        </li>
+        <li>
+            <a href="./11 - Custom Video Player/">
+                <div class="number">11</div>
+                <div class="text">Custom Video Player</div>
+            </a>
+        </li>
+        <li>
+            <a href="./12 - Key Sequence Detection/">
+                <div class="number">12</div>
+                <div class="text">Key Sequence Detection</div>
+            </a>
+        </li>
+        <li>
+            <a href="./13 - Slide in on Scroll/">
+                <div class="number">13</div>
+                <div class="text">Slide in on Scroll</div>
+            </a>
+        </li>
+        <li>
+            <a href="./14 - JavaScript References VS Copying/">
+                <div class="number">14</div>
+                <div class="text">JavaScript References VS Copying</div>
+            </a>
+        </li>
     </ul>
 
 </body>
