--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                 <div class="text">JavaScript References VS Copying</div>
             </a>
         </li>
+        <li>
+            <a href="./15 - LocalStorage/">
+                <div class="number">15</div>
+                <div class="text">LocalStorage</div>
+            </a>
+        </li>
     </ul>
 
 </body>
