--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 <div class="text">LocalStorage</div>
             </a>
         </li>
+        <li>
+            <a href="./16 - Mouse Move Shadow/">
+                <div class="number">16</div>
+                <div class="text">Mouse Move Shadow</div>
+            </a>
+        </li>
     </ul>
 
 </body>
