--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                 <div class="text">Mouse Move Shadow</div>
             </a>
         </li>
+        <li>
+            <a href="./17 - Sort Without Articles/">
+                <div class="number">17</div>
+                <div class="text">Sort Without Articles</div>
+            </a>
+        </li>
     </ul>
 
 </body>
