--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                 <div class="text">Sort Without Articles</div>
             </a>
         </li>
+        <li>
+            <a href="./18 - Adding Up Times with Reduce/">
+                <div class="number">18</div>
+                <div class="text">Adding Up Times with Reduce</div>
+            </a>
+        </li>
     </ul>
 
 </body>
