--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 <div class="text">Adding Up Times with Reduce</div>
             </a>
         </li>
+            <a href="./19 - Webcam Fun/">
+                <div class="number">19s</div>
+                <div class="text">Webcam Fun</div>
+            </a>
+        </li>
     </ul>
 
 </body>
