Update - Update index

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                 <div class="text">Adding Up Times with Reduce</div>
             </a>
         </li>
+        <li>
             <a href="./19 - Webcam Fun/">
-                <div class="number">19s</div>
+                <div class="number">19</div>
                 <div class="text">Webcam Fun</div>
             </a>
         </li>
