--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
                 <div class="text">Webcam Fun</div>
             </a>
         </li>
+        <li>
+            <a href="./20 - Speech Detection/">
+                <div class="number">20</div>
+                <div class="text">Speech Detection</div>
+            </a>
+        </li>
     </ul>
 
 </body>
