Update - Card width

--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
           <div class="text">Geolocation</div>
         </a>
       </li>
+      <li>
+        <a href="./22 - Follow Along Link Highlighter/">
+          <div class="number">22</div>
+          <div class="text">Follow Along Link Highlighter</div>
+        </a>
+      </li>
     </ul>
   </body>
 </html>
