--- a/index.html
+++ b/index.html
@@ -17,139 +17,17 @@
       <a href="https://javascript30.com/">javascript30.com</a>
     </p>
 
-    <ul>
-      <li>
-        <a href="./01 - JavaScript Drum Kit/">
-          <div class="number">01</div>
-          <div class="text">JavaScript Drum Kit</div>
-        </a>
-      </li>
-      <li>
-        <a href="./02 - JS and CSS Clock/">
-          <div class="number">02</div>
-          <div class="text">JS and CSS Clock</div>
-        </a>
-      </li>
-      <li>
-        <a href="./03 - CSS Variables/">
-          <div class="number">03</div>
-          <div class="text">CSS Variables</div>
-        </a>
-      </li>
-      <li>
-        <a href="./04 - Array Cardio Day 1/">
-          <div class="number">04</div>
-          <div class="text">Array Cardio Day 1</div>
-        </a>
-      </li>
-      <li>
-        <a href="./05 - Flex Panel Gallery/">
-          <div class="number">05</div>
-          <div class="text">Flex Panel Gallery</div>
-        </a>
-      </li>
-      <li>
-        <a href="./06 - Ajax Type Ahead/">
-          <div class="number">06</div>
-          <div class="text">Ajax Type Ahead</div>
-        </a>
-      </li>
-      <li>
-        <a href="./07 - Array Cardio Day 2/">
-          <div class="number">07</div>
-          <div class="text">Array Cardio Day 2</div>
-        </a>
-      </li>
-      <li>
-        <a href="./08 - Fun with HTML5 Canvas/">
-          <div class="number">08</div>
-          <div class="text">Fun with HTML5 Canvas</div>
-        </a>
-      </li>
-      <li>
-        <a href="./09 - Dev Tools Domination/">
-          <div class="number">09</div>
-          <div class="text">Dev Tools Domination</div>
-        </a>
-      </li>
-      <li>
-        <a href="./10 - Hold Shift and Check Checkboxes/">
-          <div class="number">10</div>
-          <div class="text">Hold Shift and Check Checkboxes</div>
-        </a>
-      </li>
-      <li>
-        <a href="./11 - Custom Video Player/">
-          <div class="number">11</div>
-          <div class="text">Custom Video Player</div>
-        </a>
-      </li>
-      <li>
-        <a href="./12 - Key Sequence Detection/">
-          <div class="number">12</div>
-          <div class="text">Key Sequence Detection</div>
-        </a>
-      </li>
-      <li>
-        <a href="./13 - Slide in on Scroll/">
-          <div class="number">13</div>
-          <div class="text">Slide in on Scroll</div>
-        </a>
-      </li>
-      <li>
-        <a href="./14 - JavaScript References VS Copying/">
-          <div class="number">14</div>
-          <div class="text">JavaScript References VS Copying</div>
-        </a>
-      </li>
-      <li>
-        <a href="./15 - LocalStorage/">
-          <div class="number">15</div>
-          <div class="text">LocalStorage</div>
-        </a>
-      </li>
-      <li>
-        <a href="./16 - Mouse Move Shadow/">
-          <div class="number">16</div>
-          <div class="text">Mouse Move Shadow</div>
-        </a>
-      </li>
-      <li>
-        <a href="./17 - Sort Without Articles/">
-          <div class="number">17</div>
-          <div class="text">Sort Without Articles</div>
-        </a>
-      </li>
-      <li>
-        <a href="./18 - Adding Up Times with Reduce/">
-          <div class="number">18</div>
-          <div class="text">Adding Up Times with Reduce</div>
-        </a>
-      </li>
-      <li>
-        <a href="./19 - Webcam Fun/">
-          <div class="number">19</div>
-          <div class="text">Webcam Fun</div>
-        </a>
-      </li>
-      <li>
-        <a href="./20 - Speech Detection/">
-          <div class="number">20</div>
-          <div class="text">Speech Detection</div>
-        </a>
-      </li>
-      <li>
-        <a href="./21 - Geolocation/">
-          <div class="number">21</div>
-          <div class="text">Geolocation</div>
-        </a>
-      </li>
-      <li>
-        <a href="./22 - Follow Along Link Highlighter/">
-          <div class="number">22</div>
-          <div class="text">Follow Along Link Highlighter</div>
-        </a>
-      </li>
-    </ul>
+    <ul></ul>
+
+    <audio
+      id="hoverSound"
+      src="./sounds/cursor_selection_07.wav"
+      preload="auto"
+    ></audio>
+    <audio
+      id="clickSound"
+      src="./sounds/cursor_click_24.wav"
+      preload="auto"
+    ></audio>
   </body>
 </html>
